--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Hello! 🙃</h1>
     <input type='text'>
     <button>Salute</button>
+    <script src="main.js"></script>
 </body>
 </html>
