--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Hello! 🙃</title>
 </head>
 <body>
     <h1>Hello! 🙃</h1>
     <input type='text'>
     <button>Salute</button>
+
+    <h2></h2>
     <script src="main.js"></script>
 </body>
 </html>
